# mailify

./: .dockerignore  .editorconfig  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  alpine.Dockerfile  app.json  docker-compose.local.yml  mailify.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  release.yml
lib/engine/: Cargo.toml
lib/engine/src/: lib.rs
lib/engine/src/loader/: http.rs  local.rs  mod.rs
lib/prelude/: Cargo.toml
src/: error.rs  lib.rs  main.rs
src/action/: mod.rs  openapi.rs  serve.rs
src/controller/: status.rs
src/controller/templates/: json.rs  multipart.rs
src/service/: server.rs
tests/: send-template-json.rs
wiki/: environment-variables.md  template-provider.md  with-aws-ses.md
